@@ -1,3 +1,12 @@
+2004-11-12  Daniel Steffen  <das@users.sourceforge.net>
+
+	* doc/SetOptions.3:
+	* doc/text.n: fixed *roff errors uncovered by running 'make html'.
+
+        * macosx/tkMacOSXFont.c (Tk_MeasureChars,Tk_DrawChars,etc): Make
+        sure that the lastSubFontPtr remains valid even when the subfont
+        array is reallocated. [Bug 618872]
+
 2004-11-11  Reinhard Max  <max@suse.de>
 
 	* generic/tkEvent.c (InvokeInputMethods): Call XSetICFocus
